# devtoys_tg_bot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
assets/: privacy_policy.md
assets/i18n/en/: home.json
assets/locales/: en.json
src/: __init__.py
src/bot/: __init__.py  commands.py  config.py  keyboards.py  main.py  middlewares.py  persistence.py  rate_limit.py  storage.py
src/bot/routers/: __init__.py  admin.py  files.py  home.py
src/bot/routers/tools/: __init__.py  base.py  base64_codec.py  code_tools.py  color_tools.py  csv_tsv.py  hash_tools.py  (+11 more)
src/bot/services/: history.py
src/bot/utils/: __init__.py  responders.py
src/core/: __init__.py  errors.py  i18n.py
src/core/utils/: __init__.py  base64_.py  code_.py  color_.py  csv_tsv.py  hash_.py  html_.py  image_.py  json_yaml.py  jwt_.py  qr_.py  regex_.py  text.py  time_.py  url.py  uuid_ulid.py  xml_.py
tests/: __init__.py  conftest.py  test_binary_and_url_utils.py  test_color_router.py  test_commands_registry.py  test_config_and_keyboards.py  test_format_utils.py  test_html_utils.py  test_json_yaml_utils.py  test_media_utils.py  test_placeholder.py  test_security_and_time_utils.py  test_storage.py  test_text_utils.py  test_tool_base_and_responders.py  test_utils_edge_cases.py  test_xml_router.py
tests/bot/: test_main.py
tests/core/utils/: test_base64.py  test_code.py  test_color.py  test_csv_tsv.py  test_hash.py  test_image.py  test_json_yaml.py  test_jwt.py  test_qr.py  test_regex.py  test_text.py  test_time.py  test_url.py  test_uuid_ulid.py  test_xml.py
(+1 files in other folders)
